feat!: parsing parameters from parameter file

--- a/nextflow.config
+++ b/nextflow.config
@@ -17,13 +17,13 @@ profiles {
     standard {
         process.executor = 'local'
         process.cpus = 4
+        process.conda = 'conda_env.yml'
     }
 
     cluster {
         process {
-            // use a predefined conda environment for jobs
-            
             executor = 'slurm'
+            conda = 'conda_env.yml'
 
             withLabel: 'q6h' {
                 time = '06:00:00'
