--- a/nextflow.config
+++ b/nextflow.config
@@ -43,7 +43,7 @@ profiles {
                 time = '00:30:00'
                 cpus = 1
                 memory = '16G'
-                clusterOptions = '--partition=a100 --gres=gpu:1 --qos=30min'
+                clusterOptions = '--partition=pascal --gres=gpu:1 --qos=30min'
             }
         }
     }
