--- a/nextflow.config
+++ b/nextflow.config
@@ -17,10 +17,13 @@ profiles {
     standard {
         process.executor = 'local'
         process.cpus = 4
+        conda.enabled = true
         process.conda = 'conda_env.yml'
     }
 
     cluster {
+        conda.enabled = true
+
         process {
             executor = 'slurm'
             conda = 'conda_env.yml'
