fix: report and resume

--- a/nextflow.config
+++ b/nextflow.config
@@ -55,5 +55,6 @@ profiles {
 // generate report of the run
 report {
     enabled = true
-    file = 'reports/report.html'
+    overwrite = true
+    file = 'report.html'
 }
